Fix panel button spacing - use standard gap-1 with min-w-max
- Use gap-1 (4px) for consistent button spacing
- Add min-w-max to prevent container from shrinking
- Fixed build system that was not updating CSS

--- a/public/main.css
+++ b/public/main.css
@@ -1661,6 +1661,9 @@ div {
 .gap-8 {
   gap: 2rem;
 }
+.gap-\[2px\] {
+  gap: 2px;
+}
 .gap-px {
   gap: 1px;
 }
@@ -2798,12 +2801,12 @@ div {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
 }
-.bg-yellow-50\/30 {
-  background-color: rgb(254 252 232 / 0.3);
-}
 .bg-yellow-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
+}
+.bg-yellow-50\/30 {
+  background-color: rgb(254 252 232 / 0.3);
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -3754,10 +3757,6 @@ div {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
-.text-yellow-900 {
-  --tw-text-opacity: 1;
-  color: rgb(113 63 18 / var(--tw-text-opacity, 1));
-}
 .text-yellow-700 {
   --tw-text-opacity: 1;
   color: rgb(161 98 7 / var(--tw-text-opacity, 1));
@@ -3765,6 +3764,10 @@ div {
 .text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(133 77 14 / var(--tw-text-opacity, 1));
+}
+.text-yellow-900 {
+  --tw-text-opacity: 1;
+  color: rgb(113 63 18 / var(--tw-text-opacity, 1));
 }
 .underline {
   text-decoration-line: underline;
@@ -5193,6 +5196,10 @@ h6 {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity, 1));
 }
+.hover\:text-blue-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity, 1));
+}
 .hover\:text-destructive:hover {
   color: hsl(var(--destructive));
 }
@@ -5313,10 +5320,6 @@ h6 {
 .hover\:text-yellow-600:hover {
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity, 1));
-}
-.hover\:text-blue-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(30 58 138 / var(--tw-text-opacity, 1));
 }
 .hover\:text-yellow-900:hover {
   --tw-text-opacity: 1;
